# MULTIMETER

./: CMakeLists.txt  README.md
multimeterClient/: CMakeLists.txt
multimeterClient/src/: main.cpp
multimeterClient/src/domain/: ChannelClient.cpp  ChannelClient.h  ChannelDispatcher.cpp  ChannelDispatcher.h
multimeterClient/src/gui/: ChannelDataView.cpp  ChannelDataView.h  MultimeterClientManager.cpp  MultimeterClientManager.h
multimeterClient/src/resources/: qml.qrc
multimeterClient/src/resources/qml/: Channel.qml  ChannelLabel.qml  Header.qml  MeasureButton.qml  MenuBox.qml  RangeItem.qml  RangeSelector.qml  StateBox.qml  ValueBox.qml  main.qml
multimeterServer/: CMakeLists.txt
multimeterServer/src/: CMakeLists.txt  main.cpp
multimeterServer/src/core/: ClientHandler.cpp  ClientHandler.h  MultimeterDispatcher.cpp  MultimeterDispatcher.h  MultimeterServer.cpp  MultimeterServer.h  RequestHandler.cpp  RequestHandler.h
